--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <script src="main.js" type="module"></script>
+    <title>mice</title>
 </head>
 <body>
-    
+    <h1>mice activity</h1>
+    <svg id="act-plot"></svg>
 </body>
 </html>
