add sex and lights legend

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <h1>mice activity</h1>
+    <div id="legends">
+        <svg id="sexes"></svg>
+        <svg id="lights"></svg>
+    </div>
     <svg id="act-plot"></svg>
 </body>
 </html>
