--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <svg id="sexes"></svg>
         <svg id="lights"></svg>
     </div>
-    <svg id="act-plot"></svg>
+    <div>
+        <svg id="act-plot"></svg>
+        <svg id="diff-chart" width="1000" height="300"></svg>
+      </div>
 </body>
 </html>
