changed toggles, added stats

--- a/index.html
+++ b/index.html
@@ -18,5 +18,11 @@
         <svg id="act-plot"></svg>
         <svg id="diff-chart" width="1000" height="300"></svg>
       </div>
+
+    <div id="stats">
+    <p>Average male activity: <span id="avg-male">—</span></p>
+    <p>Average female activity: <span id="avg-female">—</span></p>
+    <p>Average difference: <span id="avg-diff">—</span></p>
+    </div>
 </body>
 </html>
