--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <div id="legends">
         <svg id="sexes"></svg>
         <svg id="lights"></svg>
+        <svg id="reset-legend"></svg>
+        <p>I added a border that indicates whether it's showing lights on (orange) or lights off data (blue) to the legend. Not sure if this is intuitive so feel free to change or add a description when styling!</p>
     </div>
     <div>
         <svg id="act-plot"></svg>
@@ -22,7 +24,12 @@
     <div id="stats">
     <p>Average male activity: <span id="avg-male">—</span></p>
     <p>Average female activity: <span id="avg-female">—</span></p>
-    <p>Average difference: <span id="avg-diff">—</span></p>
+    <p>Average Difference Between Male and Female Activity: <span id="avg-diff">—</span></p>
+    </div>
+    <div>
+        <p>
+            <strong>i think it would be better to have the stats on the right side instead of the bottom. Again feel free to change this when styling!</strong>
+        </p>
     </div>
 </body>
 </html>
