--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <title>Mice Activity</title>
 </head>
 <body>
-    <h1>Visualizations on Activity of Mice</h1>
+    <h1>How does mice activity differ between gender over time?</h1>
 
-    <p>Click on the circles below to filter data. Drag your cursor on the top graph to select a range of time. Clcik on the reset button to reset all filters.</p>
+    <p>Click on the circles below to filter data. Drag your cursor on the top graph to select a range of time.</p>
     <div id="legends">
         <svg id="sexes" width="160" height="50"></svg>
         <svg id="lights" width="180" height="50"></svg>
@@ -23,8 +23,8 @@
         <svg id="act-plot"></svg>
         <svg id="diff-chart" width="1000" height="300"></svg>
         <div id="stats">
-            <p>Average male activity: </p><span id="avg-male">—</span>
-            <p>Average female activity: </p><span id="avg-female">—</span>
+            <p>Average Male Activity: </p><span id="avg-male">—</span>
+            <p>Average Female Activity: </p><span id="avg-female">—</span>
             <p>Average Difference Between Male and Female Activity: </p><span id="avg-diff">—</span>
         </div>
     </div>
