changed colors, fixed opacity issue

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1>How does mice activity differ between gender over time?</h1>
 
-    <p>Click on the circles below to filter data. Drag your cursor on the top graph to select a range of time.</p>
+    <p>Click on the circles below to filter data. Drag your cursor on the top graph to select a range of time. <br> Double click on the main graph to reset the axes or click 'Reset All' to reset the entire plot.</p>
     <div id="legends">
         <svg id="sexes" width="160" height="50"></svg>
         <svg id="lights" width="180" height="50"></svg>
