--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Mice Activity</title>
 </head>
 <body>
-    <h1>How does mice activity differ between gender over time?</h1>
+    <h1>How does mice activity differ between sexes over time?</h1>
 
     <p>Click on the circles below to filter data. Drag your cursor on the top graph to select a range of time. <br> Double click on the main graph to reset the axes or click 'Reset All' to reset the entire plot.</p>
     <div id="legends">
