--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             Genevieve preprocessed the data by merging the two activity datasets together, aggregating the average activity between each gender by hour, and adding a column that indicated whether or not the lights were on, which took around 30 minutes. She also worked on adding the brushing feature (1 hour), tooltips (1 hour), difference plot (2 hours), and statistics (2 hours), making sure that each of the interactive features dynamically updated with each other. Furthermore, she also added the ‘Reset All’ button and addressed bugs that arose during the process (2 hours). In total, this took approximately 8 hours of work.
             <br>
             <br>
-            Kai added the main line plot and the legend charts (gender and light status), which took 45 minutes. They worked on some interactive D3 elements, specifically the toggleable data features. Additionally, they helped integrate the toggleable elements with brushing and also addressed bugs that arose during this process. This took approximately 4 hours of work.
+            Kai added the main line plot and the legend charts (gender and light status), which took 45 minutes. They worked on some interactive D3 elements, specifically the toggleable data features. Additionally, they helped integrate the toggleable elements with brushing and also addressed bugs that arose during this process, taking approximately 4 hours of work. In total, this took about 5 hours of work.
             <br>
             <br>
             Mena worked on the CSS styling of the webpage, which took about 75 minutes. She also worked on resizing and updating the legend with changing opacity upon click, which took an hour and a half. In total, this took about 3 hours of work.
